# real_deal_hunting_agentic_AI

./: .gitignore  README.md  environment.yml  memory.json  pyproject.toml  requirements.txt
source/: load_vector_database.py  pricer_service.ipynb  pricer_service.py
source/agents/: agent.py  deals.py  deep_neural_network.py  ensemble_agent.py  frontier_agent.py  items.py  neural_network_agent.py  preprocessor.py  scanner_agent.py  specialist_agent.py
