[project]
name = "llm-engineering"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.1.0",
    "datasets",
    "feedparser>=6.0.12",
    "gradio>=5.47.2,<6.0",
    "huggingface_hub",
    "litellm>=1.77.5",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "plotly>=6.3.0",
    "pydantic",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
